Fri Aug 27 11:38:42 UTC 2010  Johnny Willemsen  <jwillemsen@remedy.nl>

        * etc/tao_cosevent.doxygen:
          Corrected output directory tag file

Fri Aug 27 08:16:20 UTC 2010  Johnny Willemsen  <jwillemsen@remedy.nl>

        * tao/tao.mpc:
          Removed zapped file

        * tests/Portable_Interceptors/Dynamic/client_interceptor.cpp:
        * tao/TransportCurrent/Current_Impl.cpp:
          Layout changes

Fri Aug 27 06:57:04 UTC 2010  Johnny Willemsen  <jwillemsen@remedy.nl>

        * etc/tao_anytypecode.doxygen:
        * etc/tao_av.doxygen:
        * etc/tao_cosevent.doxygen:
        * etc/tao_cosnotification.doxygen:
        * etc/tao_costrader.doxygen:
        * etc/tao_portablegroup.doxygen:
        * etc/tao_rtevent.doxygen:
        * etc/tao_security.doxygen:
        * etc/tao_ssliop.doxygen:
          Fuzz fixes

Thu Aug 26 16:02:12 UTC 2010  Adam Mitz  <mitza@ociweb.com>

        * MPC/config/notifytest.mpb:

          Reverted the change from
          Fri Aug 20 20:06:05 UTC 2010  Adam Mitz  <mitza at ociweb dot com>
          because it causes the "make install" builds to fail.  We will have
          to live with a warning from some linker for now.  Real fix to follow.

Thu Aug 26 14:54:25 UTC 2010  Johnny Willemsen  <jwillemsen@remedy.nl>

        * TAO_IDL/be/be_visitor_connector/connector_dds_exh.cpp:
          Slightly changed the dds traits

        * tests/MProfile_Connection_Timeout/test_i.cpp:
          Removed rcsid

Thu Aug 26 13:44:36 UTC 2010  Johnny Willemsen  <jwillemsen@remedy.nl>

        * orbsvcs/Dump_Schedule/Dump_Schedule.cpp:
        * orbsvcs/Event_Service/Event_Service.cpp:
        * orbsvcs/FTRT_Event_Service/Event_Service/FT_EventService.cpp:
        * orbsvcs/orbsvcs/IFRService/IFR_Service_Loader.cpp:
        * tests/AMH_Exceptions/client.cpp:
        * tests/AMH_Exceptions/server.cpp:
        * tests/Abstract_Interface/client.cpp:
        * tests/Abstract_Interface/server.cpp: