@@ -211,6 +211,9 @@ private:
   /// This is distinct from the leader-follower state so it cannot be reset.
   bool is_closed_;
 
+  /// Mutex to guard the is_closed_ member to prevent a double close
+  TAO_SYNCH_MUTEX is_closed_mutex_;
+   
   /*
    * Hook to add instance members from derived class
    * onto base Connection_Handler class. Any further
