@@ -43,7 +43,6 @@ TAO_Connection_Handler::is_connecting (void) const
   return this->state_ == TAO_LF_Event::LFS_CONNECTION_WAIT;
 }
 
-
 ACE_INLINE void
 TAO_Connection_Handler::connection_pending (void)
 {
@@ -71,7 +70,6 @@ TAO_Connection_Handler::handle_write_ready (const ACE_Time_Value *)
 {
   return 0;
 }
-
 
 //@@ CONNECTION_HANDLER_SPL_METHODS_ADD_HOOK
 
